Finished the Streaming Media Homework

--- a/client/client3.html
+++ b/client/client3.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>Simple Video Stream</title>
+    <title>Simple Bird Video Stream</title>
     <style>
         html, body {
             height: 100%;
             width: 100%;
             margin: 0;
             padding: 0;
-            background-color: green;
+            background-color: red;
         }
         
         h1 {
@@ -21,6 +21,6 @@
     </style>
 </head>
 <body>
-    <video src="party.mp4" autoplay controls></video>
+    <video src="bird.mp4" autoplay controls></video>
 </body>
 </html>
